--- a/index.html
+++ b/index.html
@@ -17,22 +17,43 @@
     <section id="header">Etch-a-Sketch</section>
 
     <section id="main">
-      <div id="grid"></div>
-
       <div id="options">
-        <button onclick="changeColor('black')">Black</button>
-        <button onclick="changeColor('white')">White</button>
-        <button onclick="changeColor('random')">Random</button>
-        <button onclick="resetSquareColors()">Reset</button>
+        <input
+          id="colorpicker"
+          type="color"
+          value="#0000FF"
+          onchange="changeColor(value)"
+        />
+
+        <button id="btncolor" class="btn-on" onclick="changeColor('color')">Color</button>
+        <button id="black" onclick="changeColor('black')">
+          Black
+        </button>
+        <button id="white" onclick="changeColor('white')">White</button>
+        <button id="random" onclick="changeColor('random')">Random</button>
+
         <div id="gridsize">
-        <input type="text" placeholder="Size of Grid (1-100)" value="16" onchange="changeSquares(this.value)">
-        <p id="gridsizetext"></p>
+          <div id="sizevalue" class="size-value">16 x 16</div>
+          <input
+            id="sizeslider"
+            type="range"
+            value="16"
+            min="1"
+            max="100"
+            onchange="changeGridSize(this.value)"
+          />
+        </div>
+        <button onclick="resetSquareColors()">Reset</button>
       </div>
-    </div>
+
+      <div id="grid"></div>
     </section>
 
-    <section id="footer">Copyright © 2022 Rafael Uen <a href="https://github.com/rtienpal/" target="_blank">
-      <i class="fab fa-github"></i
-      ></a></section>
+    <section id="footer">
+      Copyright © 2022 Rafael Uen
+      <a href="https://github.com/rtienpal/" target="_blank">
+        <i class="fab fa-github"></i
+      ></a>
+    </section>
   </body>
 </html>
